// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VanillaNodeDecorators create should create instances of tasks and relate them to a person instance 1`] = `
Array [
  TaskInstance {
    "props": Object {
      "title": "Buy milk",
    },
  },
  TaskInstance {
    "props": Object {
      "done": false,
      "title": "Buy beer",
    },
  },
]
`;

exports[`VanillaNodeDecorators defaultProps should define default props for the task 1`] = `
Array [
  TaskInstance {
    "props": Object {
      "title": "(empty)",
    },
  },
]
`;
